sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:5: error: 'while' expected but 'if' found.
    if(ecart>1){
    ^AlgCombSort:8: error: '(' expected but ';' found.
    i=0
^