sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart=getNombreValeurs()-1
  do{}
    if(ecart>1){
      ecart = (ecart.toDouble / 1.3).toInt
    }
    i=0
    while(i+ecart<getNombreValeurs()-1){
      i=i+ecart
      i=i+1
    }
  }
